--- a/WEB/User/Templates/User/Homepage.html
+++ b/WEB/User/Templates/User/Homepage.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="{% url 'webuser:complaint' %}">complaint</a>
     <a href="{% url 'webuser:Myprofile' %}">Myprofile</a>
 </body>
 {% if msg %}
