--- a/WEB/User/Templates/User/Homepage.html
+++ b/WEB/User/Templates/User/Homepage.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="{% url 'webuser:complaint' %}">complaint</a>
+    <!-- <a href="{% url 'webuser:complaint' %}">Servive Request</a> -->
     <a href="{% url 'webuser:Myprofile' %}">Myprofile</a>
+    <a href="{% url 'webuser:servicerequest' %}">Service Request</a>
 </body>
 {% if msg %}
 <script>
