--- a/WEB/Admin/Templates/Admin/Homepage.html
+++ b/WEB/Admin/Templates/Admin/Homepage.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="{% url 'webadmin:sercivebooking' %}">service booking</a>
+    <div><a href="{% url 'webadmin:sercivebooking' %}">service booking</a></div>
+    <div><a href="{% url 'webadmin:district' %}">District</a></div>
+    <div><a href="{% url 'webadmin:Place' %}">Place</a></div>
+    <div><a href="{% url 'webadmin:producttype' %}">producttype</a></div>
+    <div><a href="{% url 'webadmin:types' %}">Type</a></div>
 </body>
 </html>
