--- a/WEB/User/Templates/User/Homepage.html
+++ b/WEB/User/Templates/User/Homepage.html
@@ -9,6 +9,7 @@
     <!-- <a href="{% url 'webuser:complaint' %}">Servive Request</a> -->
     <a href="{% url 'webuser:Myprofile' %}">Myprofile</a>
     <a href="{% url 'webuser:servicerequest' %}">Service Request</a>
+    <a href="{% url 'webuser:myservice' %}">myservice</a>
 </body>
 {% if msg %}
 <script>
