--- a/WEB/Admin/Templates/Admin/Servicereplay.html
+++ b/WEB/Admin/Templates/Admin/Servicereplay.html
@@ -10,13 +10,11 @@
         {% csrf_token %}
         <table>
             <tr>
-                <td>service replay</td>
-                <td><input type="text" name="servicereplay" id="" value=""></td>
+                <td>Date</td>
+                <td><input type="date" name="date" id=""></td>
             </tr>
             <tr>
-                <td colspan="2" align="center"><input type="submit" value="Submit">
-                </td>
-                <td></td>
+                <td align="center"><input type="submit" value="Submit"></td>
             </tr>
         </table>
     </form>
