--- a/WEB/User/Templates/User/Myprofile.html
+++ b/WEB/User/Templates/User/Myprofile.html
@@ -11,6 +11,9 @@
 
         <table>
             <tr>
+                <td><img src="{{user.user_photo}}" alt="" width="100" height="100"></td>
+            </tr>
+            <tr>
                 <td>Name</td>
                 <td>{{user.user_name}}</td>
             </tr>
