--- a/WEB/Admin/Templates/Admin/Place.html
+++ b/WEB/Admin/Templates/Admin/Place.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form id="form1" name="form1" method="post" action="">
         {% csrf_token %}
-        <table>
+        <table width="347" height="101" border="1" align="center">
             <tr>
                 <td>District</td>
                 <td><select name="district" id="">
@@ -33,6 +33,7 @@
                 <td></td>
             </tr>
         </table>
+    </form> 
         <table>
             <tr>
                 <td>#</td>
@@ -53,7 +54,7 @@
             </tr>
             {% endfor %}
         </table>
-    </form>
+  
 </body>
 </html>
 {% endblock content %}
