--- a/WEB/Admin/Templates/Admin/Servicereplay.html
+++ b/WEB/Admin/Templates/Admin/Servicereplay.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form id="form1" name="form1" method="post" action="">
         {% csrf_token %}
-        <table>
+        <table width="347" height="101" border="1" align="center">
             <tr>
                 <td>Date</td>
                 <td><input type="date" name="date" id=""></td>
