--- a/WEB/Admin/Templates/Admin/District.html
+++ b/WEB/Admin/Templates/Admin/District.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form id="form1" name="form1" method="post" action="">
         {% csrf_token %}
-        <table align="center">
+        <table width="347" height="101" border="1" align="center">
             <tr>
                 <td>District</td>
                 <td><input type="text" name="district" id="" value=""></td>
