--- a/WEB/Admin/Templates/Admin/Producttype.html
+++ b/WEB/Admin/Templates/Admin/Producttype.html
@@ -21,9 +21,10 @@
                 </td>
             </tr>
         </table>
+    </form>
         <br />
         <br />
-        <table width="200" border="1" align="center">
+        <table>
             <tr>
                 <th>SI NO.</th>
                 <td>Product Type</td>
@@ -38,7 +39,7 @@
         </tr>
         {% endfor %}
         </table>
-    </form>
+   
 </body>
 </html>
 {% endblock content %}
