--- a/WEB/Guest/Templates/Guest/index.html
+++ b/WEB/Guest/Templates/Guest/index.html
@@ -75,17 +75,17 @@
                   <div class="menu-area">
                      <div class="limit-box">
                         <nav class="main-menu">
-                           <ul class="menu-area-main">
+                           <!-- <ul class="menu-area-main">
                               <li class="active"> <a href="index.html">Home</a> </li>
                               <li> <a href="about.html">About</a> </li>    
                               <li> <a href="contact.html">Contact</a> </li>
-                           </ul>
+                           </ul> -->
                         </nav>
                      </div>
                   </div>
                </div>
                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2">
-                  <li><a class="buy" href="#">Login</a></li>
+                  <li><a class="buy" href="{% url 'webguest:login' %}">Login</a></li>
                </div>
             </div>
          </div>
@@ -97,19 +97,32 @@
 
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="first-slide" src="{% static 'Main/images/banner2.jpg' %}" alt="First slide">
+                  <img class="first-slide" src="{% static 'Main/images/solar4.jpg' %}" width="2100" height="1000" alt="First slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>Our <br> <strong class="black_bold">Latest </strong><br>
-                           <strong class="yellow_bold">Product </strong></h1>
-                        <p>It is a long established fact that a r <br>
-                          eader will be distracted by the readable content of a page </p>
-                        <a  href="#">see more Products</a>
+                        <h1>
+                           <strong class="yellow_bold">ON GRID AND OFF GRID SYSTEMS</strong>
+                        </h1>
+                     <h2><strong style="color: white;">MAKE USE OF YOUR IDLE ROOFTOPS, WE HAVE THE SOLUTION FOR DOMESTIC AND
+                        COMMERCIAL SOLAR POWER PROJECTS</strong></h2>
+                        <!-- <a  href="#">see more Products</a> -->
                      </div>
                   </div>
                </div>
                <div class="carousel-item">
-                  <img class="second-slide" src="{% static 'Main/images/banner2.jpg' %}" alt="Second slide">
+                  <img class="second-slide" src="{% static 'Main/images/solar3.jpg' %}" width="2100" height="1000" alt="Second slide">
+                  <div class="container">
+                     <div class="carousel-caption relative">
+                        <h1>
+                           <strong class="yellow_bold">SOLAR ENERGY ABUNDANT FREE SOURCE OF ENERGY</strong>
+                        </h1>
+                        <h2><strong style="color: white;"> HIGHER SAVINGS WITH REDUCE VULNERABILITY TO POWER LOSS AND PRODUCTIVITY</strong></h2>
+                        <!-- <a  href="#">see more Products</a> -->
+                     </div>
+                  </div>
+               </div>
+               <!-- <div class="carousel-item">
+                  <img class="third-slide" src="{% static 'Main/images/solar4.jpg' %}" width="2100" height="1000" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
                         <h1>Our <br> <strong class="black_bold">Latest </strong><br>
@@ -119,19 +132,7 @@
                         <a  href="#">see more Products</a>
                      </div>
                   </div>
-               </div>
-               <div class="carousel-item">
-                  <img class="third-slide" src="{% static 'Main/images/banner2.jpg' %}" alt="Third slide">
-                  <div class="container">
-                     <div class="carousel-caption relative">
-                        <h1>Our <br> <strong class="black_bold">Latest </strong><br>
-                           <strong class="yellow_bold">Product </strong></h1>
-                        <p>It is a long established fact that a r <br>
-                          eader will be distracted by the readable content of a page </p>
-                        <a  href="#">see more Products</a>
-                     </div>
-                  </div>
-               </div>
+               </div> -->
 
             </div>
             <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
