--- a/WEB/User/Templates/User/Homepage.html
+++ b/WEB/User/Templates/User/Homepage.html
@@ -32,7 +32,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>lighten</title>
+      <title>STELLAR POWER SOLUTIONS</title>
+      <link rel="shortcut icon" type="image/png" href="{% static 'Main/images/logo.png' %}" />
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -52,6 +53,17 @@
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+      <style>
+         .row {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            margin-right: -15px;
+            margin-left: -15px;
+            justify-content: space-between !important;
+         }
+      </style>
    </head>
    <!-- body -->
    <body class="main-layout">
@@ -109,7 +121,7 @@
                   </div>
                </div>
                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2">
-                  <li><a class="buy" href="#">Logout</a></li>
+                  <li><a class="buy" href="{% url 'webuser:logout' %}">Logout</a></li>
                </div>
             </div>
          </div>
@@ -121,19 +133,32 @@
 
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="first-slide" src="{% static 'Main/images/banner2.jpg' %}" alt="First slide">
+                  <img class="first-slide" src="{% static 'Main/images/solar4.jpg' %}" width="2100" height="1000" alt="First slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>Our <br> <strong class="black_bold">Latest </strong><br>
-                           <strong class="yellow_bold">Product </strong></h1>
-                        <p>It is a long established fact that a r <br>
-                          eader will be distracted by the readable content of a page </p>
-                        <a  href="#">see more Products</a>
+                        <h1>
+                           <strong class="yellow_bold">ON GRID AND OFF GRID SYSTEMS</strong>
+                        </h1>
+                     <h2><strong style="color: white;">MAKE USE OF YOUR IDLE ROOFTOPS, WE HAVE THE SOLUTION FOR DOMESTIC AND
+                        COMMERCIAL SOLAR POWER PROJECTS</strong></h2>
+                        <!-- <a  href="#">see more Products</a> -->
                      </div>
                   </div>
                </div>
                <div class="carousel-item">
-                  <img class="second-slide" src="{% static 'Main/images/banner2.jpg' %}" alt="Second slide">
+                  <img class="second-slide" src="{% static 'Main/images/solar3.jpg' %}" width="2100" height="1000" alt="Second slide">
+                  <div class="container">
+                     <div class="carousel-caption relative">
+                        <h1>
+                           <strong class="yellow_bold">SOLAR ENERGY ABUNDANT FREE SOURCE OF ENERGY</strong>
+                        </h1>
+                        <h2><strong style="color: white;"> HIGHER SAVINGS WITH REDUCE VULNERABILITY TO POWER LOSS AND PRODUCTIVITY</strong></h2>
+                        <!-- <a  href="#">see more Products</a> -->
+                     </div>
+                  </div>
+               </div>
+               <!-- <div class="carousel-item">
+                  <img class="third-slide" src="{% static 'Main/images/solar4.jpg' %}" width="2100" height="1000" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
                         <h1>Our <br> <strong class="black_bold">Latest </strong><br>
@@ -143,19 +168,7 @@
                         <a  href="#">see more Products</a>
                      </div>
                   </div>
-               </div>
-               <div class="carousel-item">
-                  <img class="third-slide" src="{% static 'Main/images/banner2.jpg' %}" alt="Third slide">
-                  <div class="container">
-                     <div class="carousel-caption relative">
-                        <h1>Our <br> <strong class="black_bold">Latest </strong><br>
-                           <strong class="yellow_bold">Product </strong></h1>
-                        <p>It is a long established fact that a r <br>
-                          eader will be distracted by the readable content of a page </p>
-                        <a  href="#">see more Products</a>
-                     </div>
-                  </div>
-               </div>
+               </div> -->
 
             </div>
             <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
@@ -478,24 +491,28 @@
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="contact">
                      <h3>conatct us</h3>
-                     <span>123 Second Street Fifth Avenue,<br>
-                       Manhattan, New York<br>
-                        +987 654 3210</span>
+                     <span>Stellar Power solutions<br>
+                        Kurisinkal building,<br>
+                        Arakkunnam-682313, Ernakulam<br>
+                        stellarpowersolution2003@gmail.com
+                        <br>
+                        +91 9645006435
+                     </span>
                   </div>
                </div>
-                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                 <!-- <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="contact">
                      <h3>ADDITIONAL LINKS</h3>
                      <ul class="lik">
-                         <li> <a href="#">About us</a></li>
+                         <li> <a href="#">About us</a></li> 
                          <li> <a href="#">Terms and conditions</a></li>
                          <li> <a href="#">Privacy policy</a></li>
                          <li> <a href="#">News</a></li>
                           <li> <a href="#">Contact us</a></li>
                      </ul>
                   </div>
-               </div>
-                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+               </div> -->
+                 <!-- <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="contact">
                      <h3>service</h3>
                       <ul class="lik">
@@ -505,17 +522,19 @@
                          <li> <a href="#">Network solutions</a></li>
                           <li> <a href="#">Technical support</a></li>
                   </div>
-               </div>
+               </div> -->
                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="contact">
-                     <h3>About lighten</h3>
-                     <span>Tincidunt elit magnis nulla facilisis. Dolor Sapien nunc amet ultrices, </span>
+                     <h3>About Us</h3>
+                     <span>We the team of "Stellar Power Solutions" believes excellence in quality and dedication to service to provide a greener,
+                         sustainable and cost effective energy creation to the increasing energy need of our beautiful state, Kerala. We believe in values as flexibility,
+                          speed, trust, reliability and long term relationship with our valued customers.</span>
                   </div>
                </div>
             </div>
          </div>
             <div class="copyright">
-               <p>Copyright 2019 All Right Reserved By <a href="https://html.design/">Free html Templates</a> Distributed By <a href="https://themewagon.com">ThemeWagon </a></p>
+               <p>Copyright 2024 All Right Reserved By stellar power solutions</p>
             </div>
          
       </div>
