--- a/WEB/Guest/Templates/Guest/Login.html
+++ b/WEB/Guest/Templates/Guest/Login.html
@@ -38,7 +38,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Modernize Free</title>
+  <title>Login</title>
   <link rel="shortcut icon" type="image/png" href="{% static 'Admin/src/assets/images/logos/logo.png' %}" />
   <link rel="stylesheet" href="{% static 'Admin/src/assets/css/styles.min.css' %}" />
 </head>
