--- a/WEB/Guest/Templates/Guest/Userreg.html
+++ b/WEB/Guest/Templates/Guest/Userreg.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beautiful Design</title>
+    <title>User Registration</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
         }
-        .container {
+        .container-sp {
             max-width: 600px;
             margin: 50px auto;
             background-color: #fff;
@@ -63,7 +63,7 @@
     </style>
 </head>
 <body>
-   <div class="container">
+   <div class="container-sp">
     <h1>Registration Form</h1>
     <form action="" method="post" enctype="multipart/form-data">
         <table>
