--- a/WEB/Guest/static/Main/css/style.css
+++ b/WEB/Guest/static/Main/css/style.css
@@ -1918,7 +1918,7 @@ margin-top: 20px;
 }
 
 .product-bg {
-	background: url(../images/bg.jpg);
+	background: url(../images/bgr.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 }
