--- a/WEB/User/Templates/User/Feedback.html
+++ b/WEB/User/Templates/User/Feedback.html
@@ -5,22 +5,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Feedback</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .container-sp {
+            max-width: 600px;
+            margin: 50px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #f39c12;
+        }
+        form {
+            margin-top: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        td {
+            padding: 10px;
+            text-align: left;
+        }
+        textarea {
+            width: calc(100% - 20px);
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        input[type="submit"] {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #f39c12;
+            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        input[type="submit"]:hover {
+            background-color: #e67e22;
+        }
+    </style>
 </head>
 <body>
+   <div class="container-sp">
+    <h1>Feedback</h1>
     <form action="" method="post">
         {% csrf_token %}
-        
         <table>
             <tr>
                 <td>Content</td>
-                <td><textarea name="content" id="" cols="30" rows="10"></textarea></td>
+                <td><textarea name="content" id="" cols="30" rows="5"></textarea></td>
             </tr>
             <tr>
                 <td colspan="2" align="center"><input type="submit" value="Submit"></td>
             </tr>
         </table>
     </form>
+   </div>
 </body>
 </html>
+
 {% endblock content %}
