--- a/WEB/User/Templates/User/Header.html
+++ b/WEB/User/Templates/User/Header.html
@@ -87,7 +87,7 @@
                   </div>
                </div>
                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2">
-                  <li><a class="buy" href="#">Back</a></li>
+                  <li><a class="buy" href="{% url 'webuser:homepage' %}">Back</a></li>
                </div>
             </div>
          </div>
