--- a/WEB/User/Templates/User/Myprofile.html
+++ b/WEB/User/Templates/User/Myprofile.html
@@ -5,15 +5,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .container-sp {
+            max-width: 600px;
+            margin: 50px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #f39c12;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        td {
+            padding: 10px;
+        }
+        img {
+            display: block;
+            margin: auto;
+            border-radius: 50%;
+            width:150px;
+             height:150px;
+        }
+        table a {
+            text-decoration: none;
+            color: #f39c12;
+            margin-right: 20px;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
+   <div class="container-sp">
+    <h1>User Profile</h1>
     <form action="" method="post">
         {% csrf_token %}
-
         <table>
             <tr>
-                <td><img src="{{user.user_photo}}" alt="" width="100" height="100"></td>
+                <td colspan="2" align="center"><img src="{{user.user_photo}}" alt="" width="100" height="100"></td>
             </tr>
             <tr>
                 <td>Name</td>
@@ -32,11 +76,15 @@
                 <td>{{user.user_address}}</td>
             </tr>
             <tr>
-                <td colspan="2" align="center"><a href="{% url 'webuser:Editprofile' %}">Edit Profile</a>
-                <a href="{% url 'webuser:changepassword' %}">Change Password</a></td>
+                <td colspan="2" align="center">
+                    <a href="{% url 'webuser:Editprofile' %}">Edit Profile</a>
+                    <a href="{% url 'webuser:changepassword' %}">Change Password</a>
+                </td>
             </tr>
         </table>
     </form>
+   </div>
 </body>
 </html>
+
 {% endblock content %}
